HtmlUi: Fix table row height with checkboxes
In the desktop table the row was too big because the checkbox had an
(invisible) margin on the bottom

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.css
@@ -207,6 +207,8 @@
     width: @check-box-size;
     height: @check-box-size;
     #scout.checkbox-before-border();
+    /* vertical-align is necessary to remove the bottom margin */
+    vertical-align: middle;
   }
   & > .check-box.checked::before {
     #scout.checkbox-before-checked();
